--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
 
 .alliance_stake {
     height: var(--alliance-stake-height);
+    margin-right: 0.5em;
 }
 
 .neutral_stake {
@@ -72,6 +73,8 @@
 .high_stake {
     height: var(--high-stake-height);
     background-color: var(--vex-yellow);
+    margin-right: 0;
+    margin-left: 0;
 }
 
 .ring {
