--- a/style.css
+++ b/style.css
@@ -26,6 +26,21 @@
     color: red;
 }
 
+body {
+    min-height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    min-height: 25px;
+}
+
+main {
+    flex: 1;
+}
+
 .stake_area {
     display: inline-flex;
     vertical-align: bottom;
@@ -188,8 +203,12 @@ p {
 }
 
 footer {
-    margin-bottom: 0;
-    padding: 0;
+    min-height: 25px;
+    margin-bottom: 10px;
+}
+
+footer p {
+    margin: 0;
     margin-left: 15px;
 }
 
