none option for auto winner

--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ footer p {
     #scoring {
         width: 30%;
         margin-left: 80px;
+        margin-right: 50px;
     }
 
     .buddy-climb {
